--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
   		<version>14.0-rc1</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.code.findbugs</groupId>
+  		<artifactId>jsr305</artifactId>
+  		<version>2.0.1</version>
+  	</dependency>
   </dependencies>
 </project>
