--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,11 @@
   		<artifactId>jsr305</artifactId>
   		<version>2.0.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.jloisel</groupId>
+  		<artifactId>jloisel-unittest</artifactId>
+  		<version>1.0.0-SNAPSHOT</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
